--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
           <div class="video-info">
             <p class="video-title">
-              Anything You Can Fit In The Circle I’ll Pay Fors
+              Anything You Can Fit In The Circle I’ll Pay For
             </p>
             <p class="video-author">MrBeast</p>
             <p class="video-stats">141M views &#183; 1 year ago</p>
